Fixed home page scroll on mobile

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -66,6 +66,7 @@
 }
 
 @media screen and (max-width: 915px) {
+  .home.page-layout,
   .home--img {
     height: auto;
   }
