--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -17,7 +17,8 @@
 
 html,
 body {
-  height: 100vh;
+  min-height: 100vh;
+  min-height: fill-available;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
